# piku-index

./: .gitignore  README.md  pyproject.toml
data/: packages.json  packages.json.bak
piku_index/: bundles.py  cache.py  index.py  main.py
tests/: test_piku_index.py
